# lead_generation

./: .env.example  .gitignore  CTS_Reset_and_Cleanup_Scripts.txt  CT_leads_template_with_samples_23-Aug-25.csv  README.txt  check_run_consistency.sql  cts.config.cfg  fix_frontmatter.py  leadgen_pipeline.py  leads.db  main_Grok.py  matcher_Grok.py  pyproject.toml  query_sites_Grok.py  requirements.txt  utils_Grok.py
configs/: leadgen.cfg  leadgen.toml  leadgen_legacy.cfg
configs/old/: config_Grok.py  kove-dev.psd1  leadgen_Grok.py  leadgen_old.cfg  leadgen_tech_focus.ps1  leadgen_updated.cfg
old/: CT_leads_template_with_samples_23-Aug-25.xlsx  Chat_log_for_Opp_Management.txt  Lead_Gen_bootstrap.ps1  bootstrap_safe_fixed.ps1  leads.db  requirements_new.txt  requirements_old.txt
scripts/: Title_summary.query.sql  daily_incremental.ps1  daily_incremental_Grok.py  run_daily.ps1  sam_check_minimal.ps1  sam_master_with_API.ps1  test_fetch_summary.py  write_weekly_rollup.py
src/: CTS Ingest Shim_Runbook.md  change_detect_Grok.py  cleanup_old_exports.ps1  cts_harvest_sam.ps1  cts_opps_pipeline.py  cts_opps_pipeline_skeleton.py  cts_opps_pipeline_skeleton_2.py  cts_opps_pipeline_v1.py  cts_shim_multi_sources.txt  cts_shim_multi_sources_3-Sep-2025.py  detector.py  fetch_summary.py  fetcher.py  filters_cheatsheet.sql  leads.db  opportunities_schema_Grok.sql  parser.py  run_ai.ps1  run_shim.ps1  sam_client.py  sam_client_Grok.py  samgov_test.py  samgov_test_curl.py  scorer.py  set_cts_env.ps1  storage.py  triage.py  write_runlog.py  write_weekly_rollup.py
src/data/: leads.db
(+363 files in other folders)
