[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lead_generation"
version = "0.1.0"
dependencies = [
    "sentence-transformers",
    "fuzzywuzzy",
    "python-levenshtein",
    "pandas",
    "numpy",
    "requests",
    "PyPDF2"
]  # Add any other deps from scorer.py, etc.

[tool.setuptools.packages.find]
where = ["src"]